--- a/css/style.css
+++ b/css/style.css
@@ -88,3 +88,126 @@ h6 {
 }
 
 /*--------------------*/
+.wrapper {
+  min-height: 100%;
+  overflow: hidden;
+  display: flex;
+  flex-direction: column;
+}
+.content {
+  flex: 1 1 auto;
+}
+.header {
+  background-color: #445162;
+  padding: 50px 0;
+}
+.container {
+  max-width: 1180px;
+  margin: 0px auto;
+}
+.header__row {
+  display: flex;
+}
+.header__column {
+  padding: 0px 0px;
+  flex: 0 1 50%;
+  margin: 0px 0px 30px 0px;
+}
+
+.header__img {
+  border-radius: 45px;
+}
+.header__title {
+  text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
+  font-size: 20px;
+  margin: 0px 0px 38px 0px;
+}
+
+.header__about_me {
+  font-size: 20px;
+}
+.header__my_contact {
+  font-size: 11px;
+}
+
+.main__title {
+  text-align: center;
+  margin: 0px 0px 33px 0px;
+}
+.main__row {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 0px -8px;
+}
+.main__cloumn {
+  padding: 0px 8px;
+  flex: 0 1 50%;
+  margin: 0px 0px 30px 0px;
+}
+.main__item {
+}
+.item {
+}
+.item__row {
+  display: flex;
+}
+.main__block {
+}
+.item__image {
+  flex: 0 0 30px;
+}
+
+.item__image img {
+  max-width: 100%;
+}
+.item__body {
+  flex: 1 1 auto;
+  padding: 0 0 0 15px;
+}
+.item__title {
+  color: #445161;
+  font-size: 24px;
+  line-height: 30px;
+  margin: 0px 0px 13px 0px;
+}
+
+.main__list li {
+  background: url(/img/li.svg) 0px 0px no-repeat;
+  text-shadow: 1px 1px 0 rgba(170, 46, 46, 0.3);
+  font-size: 20px;
+  line-height: 12px;
+  padding: 0px 0px 0px 30px;
+  margin: 0px 0px 20px 0px;
+}
+.main__list .item__list li:last-child {
+  margin: 0;
+}
+
+.footer {
+  background-color: #445162;
+}
+.footer__row {
+  display: flex;
+  height: 65px;
+  justify-content: center;
+  align-items: center;
+}
+.footer__text {
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 0.5px;
+}
+
+.title {
+  margin: 0px 0px 40px 0px;
+  color: #445161;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-size: 30px;
+  font-weight: 400;
+  line-height: 36px;
+}
+
+.main {
+  background-color: #f5f5f5;
+  padding: 50px 0px 20px 0px;
+}
