--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
   -ms-text-size-adjust: 100%;
   -moz-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
+  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
 }
 
 input,
@@ -109,9 +110,7 @@ h6 {
   display: flex;
 }
 .header__column {
-  padding: 0px 0px;
-  flex: 0 1 50%;
-  margin: 0px 0px 30px 0px;
+  margin: 0px 50px 0px 0px;
 }
 
 .header__img {
@@ -121,13 +120,14 @@ h6 {
   text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.3);
   font-size: 20px;
   margin: 0px 0px 38px 0px;
+  flex-basis: 500px;
 }
 
 .header__about_me {
   font-size: 20px;
 }
 .header__my_contact {
-  font-size: 11px;
+  font-size: 18px;
 }
 
 .main__title {
@@ -188,6 +188,7 @@ h6 {
 }
 .footer__row {
   display: flex;
+  flex-direction: column;
   height: 65px;
   justify-content: center;
   align-items: center;
@@ -196,6 +197,12 @@ h6 {
   font-size: 20px;
   font-weight: 600;
   letter-spacing: 0.5px;
+}
+
+.footer__img {
+  width: 70px;
+  justify-content: right;
+  padding: 5px 0px;
 }
 
 .title {
@@ -208,6 +215,7 @@ h6 {
 }
 
 .main {
+  flex: 1 1 auto;
   background-color: #f5f5f5;
   padding: 50px 0px 20px 0px;
 }
